kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
      tier: backend
      track: dev
  template:
    metadata:
      labels:
        app: flask-app
        tier: backend
        track: dev
    spec:
      containers:
        - name: flask-app
          image: dumaru/flask_app:dev
          ports:
            - name: http
              containerPort: 80
