kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-gateway-svc
spec:
  type: ClusterIP
  selector: ### should match your labels defined for your flask pods
    app: flask-app
    tier: backend
    track: dev
  ports:
    - protocol: TCP
      targetPort: 5000 ### port flask app listens on
      port: 80 ### port on which you want to expose it within your cluster
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
      tier: backend
      track: dev
  template:
    metadata:
      labels:
        app: flask-app
        tier: backend
        track: dev
    spec:
      containers:
        - name: flask-app
          image: dumaru/flask_app:dev
          ports:
            - name: http
              containerPort: 5000
