kubernetes/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: flask-app
    tier: frontend
    track: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
      tier: frontend
      track: dev
  template:
    metadata:
      labels:
        app: flask-app
        tier: frontend
        track: dev
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          lifecycle:
            preStop:
              exec:
                command: ["/usr/sbin/nginx", "-s", "quit"]
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: nginx-default.conf
                path: default.conf
