kubernetes/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: default
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31000
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
      nodePort: 32000
  selector:
    app: flask-app
    tier: frontend
    track: dev
